<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login"
    tools:context=".auth.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBArOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            app:popupTheme="@style/PopupOverlay"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/passwrd"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_corners"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_new_user_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User! Register"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</RelativeLayout>